--- a/index.html
+++ b/index.html
@@ -5,8 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Privacy</title>
     <link rel="stylesheet" href="style.css">
+
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <nav class="navbar">
+            <h1 class="logo">Aireenezr.</h1>
+
+            <ul class="nav-links">
+                <li><a href="#" class="active">Home</a></li>
+                <li><a href="#">Article</a></li>
+                <li><a href="#">Play A Game</a></li>
+                <li><a href="#">About Me</a></li>
+                <li><a href="#">More</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section>
+        <h2 id="homepage-title">Digital Privacy</h2>
+        <a href="#" class="section-button">Learn More</a>
+    </section>
 </body>
 </html>
