--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
             <h1 class="logo">Aireenezr.</h1>
     
             <nav class="navbar">
-                <ul class="nav-links">
-                    <li><a href="#" class="active">Home</a></li>
-                    <li><a href="#">Article</a></li>
-                    <li><a href="#">Play A Game</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">More</a></li>
+                <ul>
+                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="article.html">Article</a></li>
+                    <li><a href="game.html">Play A Game</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="resources.html">Learn More</a></li>
                 </ul>
             </nav>
         </header>
     
         <div id="landing-page">
             <h2 id="homepage-title">Digital Privacy</h2>
-            <a href="#homepage-description" class="big-button" id="learn-more">Learn More</a>
+            <a href="#homepage-description" class="big-button" id="learn-more">Explore</a>
         </div>
     </div>
 
@@ -60,24 +60,28 @@
                     <img src="images/learn.png" alt="learnImage">
                     <h2>Learn about Digital Privacy</h2>
                     <p>Explore informative articles, tips, and best practices related to digital privacy, covering topics such as password security, data encryption, online tracking, and more. Gain insights into protecting your personal information and enhancing your online privacy.</p>
+                    <a href="article.html" class="normal-button">Article</a>
                 </li>
                 <li class="card">
                     <img src="images/play.png" alt="playImage">
                     <h2>Password Creation Game</h2>
                     <p>Engage in an interactive and educational game designed to enhance your understanding of password security. Practice creating strong and unique passwords while learning about common pitfalls to avoid. Challenge yourself to improve your password hygiene and protect your online accounts effectively.</p>
+                    <a href="game.html" class="normal-button">Play Now</a>
                 </li>
                 <li class="card">
                     <img src="images/learn.png" alt="additionalResourceImage">
                     <h2>Explore Additional Resources</h2>
                     <p>Access a curated selection of external links to reputable sources, articles, and guides related to digital privacy and cybersecurity. Dive deeper into specific topics, discover expert insights, and stay informed about the latest trends and developments in online privacy protection.</p>
+                    <a href="resources.html" class="normal-button">Resource Hub</a>
                 </li>
             </ul>
         </div>
     </section>
 
     <!-- Footer -->
-    <footer>
-
+    <footer class="footer">
+        <p>&copy; 2024 by Aireenezr.</p>
+        <p><a href="mailto:u2100667@siswa.um.edu.my">u2100667@siswa.um.edu.my</a></p>
     </footer>
 
     <script>
