--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
             <nav class="navbar">
                 <ul>
-                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="#landing-page" class="active">Home</a></li>
                     <li><a href="article.html">Article</a></li>
                     <li><a href="game.html">Play A Game</a></li>
                     <li><a href="about.html">About Us</a></li>
