--- a/home.html
+++ b/home.html
@@ -79,7 +79,7 @@
                     <a href="game.html" class="normal-button">Play Now</a>
                 </li>
                 <li class="card">
-                    <img src="images/learn.png" alt="additionalResourceImage">
+                    <img src="images/explore.png" alt="additionalResourceImage">
                     <h2>Explore Additional Resources</h2>
                     <p>Access a curated selection of external links to reputable sources, articles, and guides related to digital privacy and cybersecurity. Dive deeper into specific topics, discover expert insights, and stay informed about the latest trends and developments in online privacy protection.</p>
                     <a href="resources.html" class="normal-button">Resource Hub</a>
