done homepage, starting with second page now

--- a/home.html
+++ b/home.html
@@ -30,10 +30,10 @@
                 <!-- Navigation links -->
                 <ul class="nav-links">
                     <li><a href="#landing-page" class="active">Home</a></li>
-                    <li><a href="article.html">Article</a></li>
+                    <li><a href="digital-privacy.html">Digital Privacy</a></li>
                     <li><a href="game.html">Play A Game</a></li>
                     <li><a href="about.html">About Us</a></li>
-                    <li><a href="resources.html">Learn More</a></li>
+                    <li><a href="resource-hub.html">Resource Hub</a></li>
                 </ul>
             </nav>
         </header>
@@ -69,8 +69,8 @@
                 <li class="card">
                     <img src="images/learn.png" alt="learnImage">
                     <h2>Learn about Digital Privacy</h2>
-                    <p>Explore informative articles, tips, and best practices related to digital privacy, covering topics such as password security, data encryption, online tracking, and more. Gain insights into protecting your personal information and enhancing your online privacy.</p>
-                    <a href="article.html" class="normal-button">Article</a>
+                    <p>Explore the fundamental concepts and importance of digital privacy in today's interconnected world. Learn about the threats to digital privacy, such as data breaches, phishing attacks, and identity theft, and discover strategies to protect yourself online.</p>
+                    <a href="digital-privacy.html" class="normal-button">Read More</a>
                 </li>
                 <li class="card">
                     <img src="images/play.png" alt="playImage">
@@ -82,7 +82,7 @@
                     <img src="images/explore.png" alt="additionalResourceImage">
                     <h2>Explore Additional Resources</h2>
                     <p>Access a curated selection of external links to reputable sources, articles, and guides related to digital privacy and cybersecurity. Dive deeper into specific topics, discover expert insights, and stay informed about the latest trends and developments in online privacy protection.</p>
-                    <a href="resources.html" class="normal-button">Resource Hub</a>
+                    <a href="resource-hub.html" class="normal-button">Resource Hub</a>
                 </li>
             </ul>
         </div>
