done page 2 table of contents collapsible

--- a/digital-privacy.html
+++ b/digital-privacy.html
@@ -48,18 +48,21 @@
     </section>
 
     <!-- Table of contents (collapsible) -->
-    <section class="table-of-contents", id="table-of-contents">
+    <section class="table-of-contents", id="table-of-contents-digital-privacy">
         <div class="container collapsible">
-            <label>Table of Contents</label>
+            <input type="checkbox" id="collapsible-head">
+            <label for="collapsible-head">
+                Table of Contents <i class="fa-solid fa-caret-down"></i>
+            </label>
             
-            <div class="collapsible-text">
-                <p>1. What is Digital Privacy</p>
-                <p>2. Importance of Digital Privacy</p>
-                <p>3. Threat to Digital Privacy in the Age of Information and Communication Technology</p>
-                <p>4. Impact of Digital Privacy</p>
-                <p>5. How to Protect Your Digital Privacy and Security</p>
-                <p>6. Conclusion</p>
-            </div>
+            <ol class="collapsible-text" type="1">
+                <li><a href="#what-is-digital-privacy">What is Digital Privacy</a></li>
+                <li><a href="#importance-of-digital-privacy">Importance of Digital Privacy</a></li>
+                <li><a href="#threat">Threat to Digital Privacy in the Age of ICT</a></li>
+                <li><a href="#impact">Impact of Digital Privacy</a></li>
+                <li><a href="#how-to-protect">How to Protect Your Digital Privacy and Security</a></li>
+                <li><a href="#conclusion">Conclusion</a></li>
+            </ol>
         </div>
     </section>
     
