added wrong answer sound

--- a/game-level.html
+++ b/game-level.html
@@ -76,7 +76,11 @@
     <!-- Audio element for button click sound -->
     <audio id="next-level-sound">
         <source src="sound/next-level.wav" type="audio/wav">
-    </audio>    
+    </audio>
+
+    <audio id="wrong-answer-sound">
+        <source src="sound/wrong-answer.wav" type="audio/wav">
+    </audio>
 
     <!-- Script -->
     <script src="script-game.js"></script>
