updated input field

--- a/game-level.html
+++ b/game-level.html
@@ -54,7 +54,7 @@
 
             <!-- Input field -->
             <label class="player-answer">Answer:
-                <input type="text" id="player-answer" required="required" placeholder="Enter your answer">
+                <input type="text" id="player-answer" required="required">
             </label>
 
             <!-- Submit button and reset level -->
