done about us page

--- a/about.html
+++ b/about.html
@@ -58,7 +58,32 @@
     <!-- Our team -->
 
     <!-- Contact us -->
-    
+    <section class="contact-us", id="contact-us">
+        <div class="section-description-center">
+            <h2>Contact Us</h2>
+        </div>
+
+        <!-- Contact details -->
+        <div class="contact-details">
+            <p><i class="fas fa-envelope"></i><a href="mailto:u2100667@siswa.um.edu.my">u2100667@siswa.um.edu.my</a></p>
+            <p><i class="fas fa-clock"></i>Monday - Friday: 9:00 AM - 5:00 PM</p>
+            <p><i class="fas fa-globe"></i>www.aireenezr.com</p>
+        </div>
+
+        <div class="feedback-form">
+            <form action="#">
+                <input type="text" placeholder="Name*" required/>
+                <input type="email" placeholder="Email*" required/>
+                <textarea placeholder="Leave us a message" required></textarea>
+                <br>
+                
+                <!-- Submit feedback -->
+                <div class="submit-feedback-button-container">
+                    <button class="normal-button" id="submit-feedback-button" type="submit">Submit Feedback</button>
+                </div>
+            </form>
+        </div>
+    </section>
 
     <!-- Footer -->
     <footer class="footer">
