changed script directory

--- a/about.html
+++ b/about.html
@@ -55,8 +55,6 @@
         </div>
     </section>
 
-    <!-- Our team -->
-
     <!-- Contact us -->
     <section class="contact-us", id="contact-us">
         <div class="section-description-center">
@@ -66,6 +64,7 @@
         <!-- Contact details -->
         <div class="contact-details">
             <p><i class="fas fa-envelope"></i><a href="mailto:u2100667@siswa.um.edu.my">u2100667@siswa.um.edu.my</a></p>
+            <p><i class="fa-brands fa-linkedin"></i><a href="https://www.linkedin.com/in/aireen-elzahraa-799728275/">linkedin.com</a></p>
             <p><i class="fas fa-clock"></i>Monday - Friday: 9:00 AM - 5:00 PM</p>
             <p><i class="fas fa-globe"></i>www.aireenezr.com</p>
         </div>
