--- a/game-level.html
+++ b/game-level.html
@@ -83,7 +83,7 @@
     </audio>
 
     <!-- Script -->
-    <script src="script-game.js"></script>
+    <script src="scripts/script-game.js"></script>
 
     <!-- Scrolling for header -->
     <script src="https://kit.fontawesome.com/dd36547fc8.js" crossorigin="anonymous"></script>
