--- a/game.html
+++ b/game.html
@@ -54,7 +54,7 @@
     </section>
 
     <!-- Link to script -->
-    <script src="script-game.js"></script>
+    <script src="scripts/script-game.js"></script>
 
     <!-- Footer -->
     <footer class="footer">
