removed search bar in resource-hub.html

--- a/resource-hub.html
+++ b/resource-hub.html
@@ -42,15 +42,15 @@
         <div class="container">
             <div class="news-header" id="news-header">
                 <!-- Header -->
-                <h2>News related to Technology</h2>
+                <h2>News related to Technology  &#8594</h2>
                 
-                <!-- Search bar -->
+                <!-- Search bar 
                 <form class="search-bar">
                     <input id="news-query" type="text" placeholder="Search News">
                     <button id="search-news-button" type="button">
                         <i class="fas fa-search"></i>
                     </button>
-                </form>
+                </form> -->
             </div>
 
             <!-- News -->
