--- a/home.html
+++ b/home.html
@@ -79,7 +79,7 @@
                 <li class="card">
                     <img src="images/explore.png" alt="additionalResourceImage">
                     <h2>Explore Additional Resources</h2>
-                    <p>Access a curated selection of external links to reputable sources, articles, and guides related to digital privacy and cybersecurity. Dive deeper into specific topics, discover expert insights, and stay informed about the latest trends and developments in online privacy protection.</p>
+                    <p>Explore a handpicked collection of the latest, real-time news and articles on cutting-edge technology. Delve into specific topics, gain expert insights, and stay updated with the most recent advancements and trends shaping the tech world.</p>
                     <a href="resource-hub.html" class="normal-button">Resource Hub</a>
                 </li>
             </ul>
