--- a/game-level.html
+++ b/game-level.html
@@ -17,7 +17,7 @@
 <body>
     <!-- Header -->
     <header class="header-aside-homepage">
-        <h1 class="logo">Aireenezr.</h1>
+        <h1 class="logo">LearnTech.</h1>
 
         <nav class="navbar">
             <!-- Hamburger menu for smaller screen -->
