--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
     <!-- Landing page -->
     <div class="homepage-header-and-section">
         <header>
-            <h1 class="logo">Aireenezr.</h1>
+            <h1 class="logo">LearnTech.</h1>
     
             <nav class="navbar">
                 <!-- Hamburger menu for smaller screen -->
