chatbot ui initial

--- a/home.html
+++ b/home.html
@@ -60,6 +60,38 @@
         </div>
     </section>
 
+    <!-- Chatbot -->
+    <button class="chatbot-toggler">
+        <span><i class="fa-solid fa-robot"></i></span>
+        <span><i class="fa-solid fa-circle-xmark"></i></span>
+    </button>
+
+    <div class="chatbot">
+        <!-- Title -->
+        <h2>Chatbot</h2>
+
+        <!-- Chat conversation -->
+        <ul class="chatbox">
+            <li class="chat incoming">
+                <span><i class="fa-solid fa-robot"></i></span>
+                <p>
+                    Hi there 😊
+                    <br>
+                    How can I help you today?
+                </p>
+            </li>
+            <li class="chat outgoing">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+            </li>
+        </ul>
+
+        <!-- Chat input field -->
+        <div class="chat-input">
+            <textarea id="input-field" placeholder="Enter a message"></textarea>
+            <span class="send-btn" id="send-btn"><i class="fa-regular fa-paper-plane"></i></span>
+        </div>
+    </div>
+
     <!-- Feature overview -->
     <section class="feature-overview alternate-section", id="feature-overview">
         <div class="container">
