improve chatbox display

--- a/home.html
+++ b/home.html
@@ -75,11 +75,7 @@
             <ul class="chatbox">
                 <li class="chat incoming">
                     <span><i class="fa-solid fa-robot"></i></span>
-                    <p>
-                        Hi there 😊
-                        <br>
-                        How can I help you today?
-                    </p>
+                    <p>Hi there 😊<br>How can I help you today?</p>
                 </li>
                 <!--<li class="chat outgoing">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
