completed chatbot feature

--- a/home.html
+++ b/home.html
@@ -61,7 +61,7 @@
     </section>
 
     <!-- Chatbot -->
-    <div class="show-chatbot">
+    <div>
         <button class="chatbot-toggler">
             <span><i class="fa-solid fa-robot"></i></span>
             <span><i class="fa-solid fa-xmark"></i></span>
